# nous

./: .copilot-rules  .cursorignore  .cursorrules  .env.vault  .gitignore  LICENSE.md  alembic.ini  containers.py  main.py  pyproject.toml  setup.py
docs/: groq.md
init/mysql/: init.sql
migrations/: env.py
migrations/versions/: 20241204_0339_01230bac67c2_command_hash.py  20241204_0447_a9a2991fdaf9_command2.py  20241204_1428_f09ce86daeab_fix.py  20241204_2209_ec6c27179e59_initial.py  6696b6d1f62e_initial_migration.py  initial_migration.py
src/: __init__.py  bot.py  config.py  containers.py  injection.py  module_manager.py
src/bot/: config.py  core.py
src/chat/: __init__.py  groq_client.py  handler.py  memory_store.py  message_history.py  prompt_manager.py
src/chat/templates/: default_system.j2
src/cogs/: __init__.py  chat.py
src/cogs/admin/: __init__.py  permissions.py
src/cogs/general/: __init__.py  info.py  utility.py
src/cogs/owner/: __init__.py  permissions.py  settings.py  system.py
src/core/: bot.py  client.py  config.py  initialization.py  mod_manager.py  module_manager.py
src/database/: __init__.py  base.py  config.py  connection.py  manager.py  migrations.py  service.py  supabase.py  utils.py
src/database/models/: __init__.py  command_hash.py  permission.py  user.py
src/database/repositories/: __init__.py  permission_repository.py  user_repository.py
src/database/services/: user_service.py
src/llm/: events.py  interactions.py
src/llm/memory/: short_term.py
src/llm/providers/: __init__.py  base.py  groq.py  openai.py
src/modules/chat/: __init__.py  chat.py  events.py  memory.py
src/services/: __init__.py
src/services/database/: __init__.py  client.py  init.py  manager.py  mock_service.py  service.py
src/services/llm/: __init__.py  base.py  (+3 more)
src/utils/: command_sync.py  decorators.py  feature_manager.py  logger.py  logging.py  permissions.py
(+16 files in other folders)
