[tool.poetry]
name = "just4fun"
version = "0.1.0"
description = ""
authors = ["anthoeknee <pacyheb@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"
rich = "^13.9.4"
redis = "^5.2.0"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.2"
pynacl = "^1.5.0"
dependency-injector = "^4.43.0"
supabase = "^2.10.0"
sentry-sdk = "^2.19.0"
python-dotenv = "^1.0.1"
onnx = "^1.17.0"
onnxruntime-gpu = "^1.20.1"
sentence-transformers = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"