[tool.poetry]
name = "just4fun"
version = "0.1.0"
description = ""
authors = ["anthoeknee <pacyheb@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
rich = "^13.9.4"
redis = "^5.2.0"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.2"
pynacl = "^1.5.0"
dependency-injector = "^4.43.0"
supabase = "^2.10.0"
sentry-sdk = "^2.19.0"
python-dotenv = "^1.0.1"
lancedb = "0.16.0"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
jinja2 = "^3.1.4"
openai = "^1.55.3"
groq = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"